fix(label): fixes inline label alignment

--- a/src/components/SLabel/SLabel.scss
+++ b/src/components/SLabel/SLabel.scss
@@ -10,6 +10,10 @@
     flex-direction: row;
     justify-content: flex-start;
 
+    span {
+      margin-top: spacing('half');
+    }
+
     .input,
     .textarea,
     .select {
